# ninniku

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  Directory.Build.props  LICENSE  README.md  cppCoreCheckFull.ruleset  credits.md  ninniku.sln  ninniku.vcxproj  ninniku.vcxproj.filters  packages.config
.github/workflows/: build.yml
apps/simple/: CMakeLists.txt
cmake/: format_target.cmake
include/ninniku/: export.h  ninniku.h  types.h  utils.h
shader_compiler/: Common.cs  Compiler.cs  Parser.cs  Program.cs  shader_compiler.csproj
shader_compiler/data/: shaders.xml
simple/: 565.hlsl  common.hlsl  dds_saveImage_bc5.dds  gradient.hlsl  hcl565.hlsl  hcy565.hlsl  hsl565.hlsl  hsv565.hlsl  narita.dds  narita.exr  normal2Derivative.hlsl  rgb565.hlsl  simple.cpp  simple.vcxproj  simple.vcxproj.filters  structured.hlsl  ycocg565.hlsl
simple/shaders/: cbuffers.h  colorMips.hlsl  derivative2Normal.hlsl  downsample.hlsl  fillBuffer.hlsl
src/: globals.h  image.cpp  image.h  main.cpp  ninniku.cpp  pch.cpp  pch.h  process.cpp  process.h  types.cpp  types.h
src/core/: buffer.cpp  buffer_impl.cpp  buffer_impl.h
src/dx11/: DX11.cpp  DX11.h  DX11Types.cpp  DX11Types.h  DX11_impl.cpp  DX11_impl.h
src/image/: cmft.cpp  cmft.h  cmft_impl.cpp  cmft_impl.h  dds.cpp  dds.h  dds_impl.cpp  dds_impl.h  generic.cpp  generic_impl.cpp  generic_impl.h  image.cpp  image.h  image_impl.cpp  image_impl.h  png.cpp  png_impl.cpp  png_impl.h
src/shaders/: cbuffers.h  colorFaces.hlsl  downsample.hlsl  resize.hlsl  utility.hlsl
src/utils/: log.cpp  log.h  mathUtils.cpp  mathUtils.h  misc.cpp  misc.h  objectTracker.cpp  objectTracker.h  object_tracker.cpp  stringMap.h  string_map.h  string_set.cpp  string_set.h  trace.h  vectorSet.h  vector_set.h  window.cpp  window.h
unit_test/: fixture.cpp  fixture.h  main.cpp  packages.config  unit_test.vcxproj  unit_test.vcxproj.filters
unit_test/data/: Cathedral01.dds  Cathedral01.hdr  (+7 more)
(+109 files in other folders)
